fix: 홈 라우트 링크를 /로 변경

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -11,7 +11,7 @@
   <div class="sidebar">
     <h2>Hanyul</h2>
     <nav class="nav flex-column">
-      <a class="nav-link" href="/app/static">홈</a>
+      <a class="nav-link" href="/">홈</a>
       <a class="nav-link" href="/projects">프로젝트</a>
       <a class="nav-link" href="/about">소개</a>
       <a class="nav-link" href="/contact">연락처</a>
