--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -1,83 +1,382 @@
-body {
-  background-color: #f0f8ff;
-  font-family: "Segoe UI", sans-serif;
-  display: flex;
-  min-height: 100vh;
+* {
+    margin: 0;
+    padding: 0;
+    font-family: 'Poppins', sans-serif;
+    box-sizing: border-box;
+}
+html{
+    scroll-behavior: smooth;
+}
+body{
+    background: #f4f3f2;
+    color: #433e49;
 }
 
-.sidebar {
-  width: 250px;
-  background: #00acc1;
-  color: white;
-  padding: 30px 20px;
-  text-align: center;
+#header{
+    width: 100%;
+    height: 100vh;
+    /*background-image: url(/app/static/images/background.png);*/
+    background-size: cover;
+    background-position: center;
 }
 
-.sidebar img {
-  width: 170px;
-  height: 170px;
-  border-radius: 50%;
-  border: 5px solid #fff;
-  margin-bottom: 20px;
-  object-fit: cover;
+.container{
+    padding: 10px 10%;
 }
 
-.carousel-control-prev-icon,
-.carousel-control-next-icon {
-  filter: invert(1) grayscale(100);
+nav{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    flex-wrap: wrap;
 }
 
-.sidebar h2 {
-  margin-bottom: 20px;
-  font-weight: bold;
+.logo {
+    width: 140px;
+    font-size: 20px;
+    font-weight: bolder;
+    color: #433e49;
 }
 
-.nav-link {
-  color: #e8f5e9 !important;
-  margin: 5px 0;
-  transition: all 0.3s ease;
+nav ul li{
+    display: inline-block;
+    list-style: none;
+    margin: 10px 20px;
 }
 
-.nav-link:hover {
-  background-color: #00838f;
-  color: #ffffff !important;
-  border-radius: 8px;
-  padding-left: 10px;
+nav ul li a{
+    color: #433249;
+    text-decoration: none;
+    font-size: 18px;
+    position: relative;
 }
 
-.nav-link:active {
-  transform: scale(0.97);
-  background-color: #006064;
+nav ul li a::after {
+    content: '';
+    width: 0;
+    height: 3px;
+    background: #dbc1ad;
+    position: absolute;
+    left: 0;
+    bottom: -6px;
+    transition: 0.5s;
 }
 
-.content {
-  flex: 1;
-  padding: 40px;
+nav ul li a:hover::after{
+    width: 100%;
 }
 
-.hero {
-  background: linear-gradient(135deg, #81d4fa, #aed581);
-  color: white;
-  padding: 60px 20px;
-  text-align: center;
-  border-radius: 12px;
+.header-text{
+    margin-top: 20%;
+    font-size: 30px;
+}
+.header-text h1 {
+    font-size: 60px;
+    margin-top: 20px;
 }
 
-.roles {
-  font-size: 1.2rem;
-  color: #eee;
-  text-align: center;
+.header-text h1 span{
+    color: #928490;
 }
 
-.hero h1 {
-  font-size: 3rem;
-  font-weight: bold;
+/* ------about------ */
+#about {
+    padding: 80px 0;
+    color: #ababab;
 }
 
-.card-img-top {
-  width: 100%;
-  height: 300px;
-  object-fit: cover;
-  border-top-left-radius: 0.5rem;
-  border-top-right-radius: 0.5rem;
+.row {
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+}
+
+.about-col-1{
+    flex-basis: 35%;
+}
+
+.about-col-1 img{
+    width: 100%;
+}
+
+.about-col-2{
+    flex-basis: 60%;
+}
+
+.sub-title{
+    font-size: 60px;
+    color: #433e49
+}
+
+.about-col-2 p {
+/*    !*text-indent: 1.2em;*!*/
+    line-height: 1.8;
+    color: #433E49;
+    margin-bottom: 20px;
+
+}
+
+.tab-titles {
+    display: flex;
+    margin: 20px 0 20px;
+}
+
+.tab-links{
+    margin: 50px 80px 10px 0;
+    font-size: 18px;
+    font-weight: 500;
+    cursor: pointer;
+    position: relative;
+}
+
+.tab-links::after{
+    content: '';
+    width: 0;
+    height: 3px;
+    background: #dbc1ad;
+    position: absolute;
+    left: 0;
+    bottom: -4px;
+    transition: 0.5s;
+}
+.tab-links.active-link::after{
+    width: 100%;
+
+}
+
+.tab-contents ul li{
+    list-style: none;
+    margin: 10px 0;
+    font-size: 16px;
+}
+.tab-contents ul li span{
+    color: #928490;
+    font-weight: bold;
+    font-size: 16px;
+}
+
+.tab-contents{
+    display: none;
+}
+
+.tab-contents.active-tab{
+    display: block;
+}
+
+/*--------------projects----------------*/
+#projects{
+    padding: 50px 0;
+}
+
+.work-list{
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    grid-gap: 40px;
+    margin-top: 50px;
+}
+
+.work{
+    border-radius: 10px;
+    position: relative;
+    overflow: hidden;
+}
+
+.work img{
+    width: 100%;
+    height: 100%;
+    border-radius: 10px;
+    display: block;
+    transition: transform 0.5s;
+}
+
+.layer{
+    width: 100%;
+    height: 0;
+    background: linear-gradient(rgba(0,0,0,0.6), #928490);
+    border-radius: 10px;
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    overflow: hidden;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    padding: 0 40px;
+    text-align: center;
+    transition: height 0.5s;
+}
+
+.layer h3{
+    color: #f4f3f2;
+    font-weight: 500;
+    font-size: 1.5em;
+    margin-bottom: 20px;
+
+}
+.layer p{
+    color: #f4f3f2;
+}
+
+.layer a{
+    margin-top: 20px;
+    color: #928490;
+    text-decoration: none;
+    font-size: 18px;
+    line-height: 50px;
+    background: #f4f3f2;
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    text-align: center;
+}
+.work:hover img{
+    transform: scale(1.1);
+}
+.work:hover .layer{
+    height: 100%;
+}
+
+.btn.btn1{
+    display: block;
+    margin: 50px auto;
+    width: fit-content;
+    border: 1px solid #928490;
+    padding: 14px 50px;
+    border-radius: 6px;
+    text-decoration: none;
+    font-weight: bold;
+    color: #928490;
+    transition: background 0.5s, color 0.5s;
+}
+.btn1:hover{
+    background: #928490;
+    color: #f4f3f2;
+}
+
+/*---------------contact--------------*/
+
+.contact-left{
+    flex-basis: 35%;
+    line-height: 1.8;
+}
+.contact-right{
+    flex-basis: 60%;
+}
+.contact-left p {
+}
+.contact-left a {
+    margin-top: 20px;
+    margin-right: 10px;
+    text-decoration: none;
+    display: inline-block;
+    color: #433e49;
+    transition: transform 0.5s;
+}
+
+.social-icons a:hover{
+    color: #DBC1AD;
+    transform: translateY(-5px);
+}
+
+.btn.btn2{
+    display: inline-block;
+    background: #928490;
+    color: #f4f3f2;
+    margin: 50px auto;
+    width: fit-content;
+    border: 1px solid #928490;
+    padding: 14px 50px;
+    border-radius: 6px;
+    text-decoration: none;
+    font-weight: bold;
+    transition: background 0.5s, color 0.5s;
+}
+
+
+.contact-right form{
+    width: 100%;
+}
+form input, form textarea{
+    width: 100%;
+    border: 0;
+    outline: none;
+    background: #F3E8EB80;
+    padding: 15px;
+    margin: 15px 0;
+    color: #433e49;
+    font-size: 18px;
+    border-radius: 6px;
+}
+
+form .btn2{
+    padding: 14px 60px;
+    font-size: 18px;
+    margin-top: 20px;
+    cursor: pointer;
+}
+.copyright{
+    width: 100%;
+    text-align: center;
+    padding: 25px 0;
+    font-weight: 400;
+    margin-top: 20px;
+}
+
+/*----------------- css for small screens --------------------*/
+nav .fas{
+    display: none;
+}
+
+@media only screen and (max-width: 600px) {
+    .header-text{
+        margin-top: 100%;
+        font-size: 16px;
+    }
+    .header-text h1{
+        font-size: 30px;
+    }
+    nav .fas{
+        display: block;
+    }
+    nav ul{
+        background: #f4edef;
+        position: fixed;
+        top: 0;
+        right: -200px;
+        width: 200px;
+        height: 100vh;
+        padding-top: 50px;
+        z-index: 2;
+        transition: right 0.5s;
+    }
+    nav ul li{
+        display: block;
+        margin: 25px;
+    }
+    nav ul .fas{
+        position: absolute;
+        top: 25px;
+        left: 25px;
+        cursor: pointer;
+    }
+    .sub-title{
+        font-size: 40px;
+    }
+    .about-col-1, .about-col-2{
+        flex-basis: 100%;
+    }
+    .about-col-1{
+        margin-bottom: 30px;
+    }
+    .about-col-2{
+        font-size: 14px;
+    }
+    .tab-links{
+        font-size: 16px;
+        margin-right: 20px;
+    }
+    .contact-left, .contact-right{
+        flex-basis: 100%;
+    }
 }
