refactor: HTML 구조 분리 - base.html과 about.html 생성

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -87,6 +87,7 @@
                 <div class="layer">
                     <h3>프로젝트1 이름</h3>
                     <p>프로젝트1 설명을 구구절절 멋지게 보이도록 적어보자..</p>
+                    <!-- 프로젝트 만들면 깃허브 레포 주소 넣을 예정-->
                     <a href="#"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
                 </div>
             </div>
@@ -95,6 +96,7 @@
                 <div class="layer">
                     <h3>프로젝트2 이름</h3>
                     <p>프로젝트2 설명을 구구절절 멋지게 보이도록 적어보자..</p>
+                    <!-- 프로젝트 만들면 깃허브 레포 주소 넣을 예정-->
                     <a href="#"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
                 </div>
             </div>
@@ -103,11 +105,12 @@
                 <div class="layer">
                     <h3>프로젝트3 이름</h3>
                     <p>프로젝트3 설명을 구구절절 멋지게 보이도록 적어보자..</p>
+                    <!-- 프로젝트 만들면 깃허브 레포 주소 넣을 예정-->
                     <a href="#"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
                 </div>
             </div>
         </div>
-        <a href="#" class="btn btn1">See more</a>
+        <a href="https://github.com/ji-min0?tab=repositories" class="btn btn1">See more <i class="fa-brands fa-github"></i></a>
     </div>
 </div>
 
@@ -128,9 +131,9 @@
             </div>
             <div class="contact-right">
                 <form>
-                    <input type="text" name="Name" placeholder="Your Name" required>
+                    <input type="text" name="name" placeholder="Your Name" required>
                     <input type="email" name="email" placeholder="Your Email" required>
-                    <textarea name="Message" rows="6" placeholder="Your Message"></textarea>
+                    <textarea name="message" rows="6" placeholder="Your Message"></textarea>
                     <button type="submit" class="btn btn2">Submit</button>
                 </form>
             </div>
