feat: 작은 화면 대응을 위한 반응형 CSS 추가

--- a/app/templates/projects.html
+++ b/app/templates/projects.html
@@ -89,6 +89,12 @@
         background: #928490;
         color: #f4f3f2;
     }
+/*----------------- css for small screens --------------------*/
+@media only screen and (max-width: 600px) {
+    .sub-title {
+        font-size: 40px;
+    }
+}
 </style>
 <div id="projects">
     <div class="container">
