--- a/app/templates/contact.html
+++ b/app/templates/contact.html
@@ -61,15 +61,25 @@
         margin-top: 20px;
         cursor: pointer;
     }
+/*----------------- css for small screens --------------------*/
+@media only screen and (max-width: 600px) {
+    .sub-title{
+        font-size: 40px;
+    }
+    .contact-left, .contact-right {
+        flex-basis: 100%;
+    }
+}
 </style>
 
 <div class="contact">
     <div class="container">
+        <br><br>
         <div class="row">
             <div class="contact-left">
                 <h1 class="sub-title">Contact Me</h1>
                 <p><i class="fa-regular fa-envelope"></i> k.jimin2002@gmail.com</p>
-                <p><i class="fa-solid fa-mobile-screen"></i> +82 10-5290-2503</p>
+<!--                <p><i class="fa-solid fa-mobile-screen"></i> +82 </p>-->
                 <div class="social-icons">
                     <a href="#"><i class="fa-brands fa-instagram"></i>instagram</a>
                     <a href="https://github.com/ji-min0"><i class="fa-brands fa-github"></i>github</a>
@@ -77,20 +87,19 @@
                 </div>
                 <a href="images/my-cv.pdf" download class="btn btn2">Download CV</a>
             </div>
-
             <div class="contact-right">
                 <form action="/contact" method="post">
+                    <br><br><br><br><br>
                     <input type="text" name="name" placeholder="Your Name" required>
                     <input type="email" name="email" placeholder="Your Email" required>
                     <textarea name="message" rows="6" placeholder="Your Message"></textarea>
                     <button type="submit" class="btn btn2">Submit</button>
                 </form>
             </div>
-
         {% if result %}
         <div class="alert alert-info mt-3">{{ result }}</div>
         {% endif %}
-      </div>
+        </div>
     </div>
 </div>
 {% endblock %}
