--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -1,6 +1,30 @@
 {% extends "base.html" %}
 {% block title %}Home{% endblock %}
 {% block header_text %}
+<style>
+    .header-text{
+        margin-top: 20%;
+        font-size: 30px;
+    }
+    .header-text h1 {
+        font-size: 60px;
+        margin-top: 20px;
+    }
+    .header-text h1 span{
+        color: #928490;
+    }
+/*----------------- css for small screens --------------------*/
+@media only screen and (max-width: 600px) {
+    .header-text {
+        margin-top: 100%;
+        font-size: 16px;
+    }
+
+    .header-text h1 {
+        font-size: 30px;
+    }
+}
+</style>
 <div class="header-text">
     <p>Backend Developer</p>
     <h1>Hi, I'm <span>Jimin</span><br>Kang From Korea</h1>
