feat: logo 클릭 시 홈 화면으로 이동

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -10,7 +10,9 @@
 <div id="header">
     <div class="container">
         <nav>
-            <p class="logo">jimin | profile</p>
+            <a href="/" style="text-decoration: none;">
+                <p class="logo" href="/">jimin | profile</p>
+            </a>
             <ul id="sidemenu">
                 <li><a href="/">Home</a></li>
                 <li><a href="/about">About</a></li>
