--- a/app/templates/contact.html
+++ b/app/templates/contact.html
@@ -85,7 +85,7 @@
                     <a href="https://github.com/ji-min0"><i class="fa-brands fa-github"></i>github</a>
                     <a href="https://hello-dev-world.tistory.com/"><i class="fa-solid fa-book"></i>tistory</a>
                 </div>
-                <a href="images/my-cv.pdf" download class="btn btn2">Download CV</a>
+                <a href="/static/images/my-cv.pdf" download class="btn btn2">Download CV</a>
             </div>
             <div class="contact-right">
                 <form action="/contact" method="post">
