--- a/app/templates/contact.html
+++ b/app/templates/contact.html
@@ -9,8 +9,6 @@
     .contact-right{
         flex-basis: 60%;
     }
-    .contact-left p {
-    }
     .contact-left a {
         margin-top: 20px;
         margin-right: 10px;
@@ -19,12 +17,10 @@
         color: #433e49;
         transition: transform 0.5s;
     }
-
     .social-icons a:hover{
         color: #DBC1AD;
         transform: translateY(-5px);
     }
-
     .btn.btn2{
         display: inline-block;
         background: #928490;
@@ -38,8 +34,6 @@
         font-weight: bold;
         transition: background 0.5s, color 0.5s;
     }
-
-
     .contact-right form{
         width: 100%;
     }
@@ -60,6 +54,12 @@
         font-size: 18px;
         margin-top: 20px;
         cursor: pointer;
+    }
+    .row {
+        display: flex;
+        justify-content: space-between;
+        flex-wrap: wrap;
+        align-items: flex-start;
     }
 /*----------------- css for small screens --------------------*/
 @media only screen and (max-width: 600px) {
