chore: about page css 수정

--- a/app/templates/contact.html
+++ b/app/templates/contact.html
@@ -61,6 +61,10 @@
         flex-wrap: wrap;
         align-items: flex-start;
     }
+    .sub-title{
+        font-size: 60px;
+        color: #433e49
+    }
 /*----------------- css for small screens --------------------*/
 @media only screen and (max-width: 600px) {
     .sub-title{
