--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -56,10 +56,10 @@
                         <li><span>프로그래밍 언어 &ensp;| </span>&ensp; python</li>
                         <li><span>웹 프레임워크 &ensp;| </span>&ensp; Django, FastAPI, Flask</li>
                         <li><span>웹/클라이언트 &ensp;| </span> &ensp; HTML, CSS, JavaScript</li>
-                        <li><span>데이터베이스 &ensp;| </span> &ensp; MySQL, SQLite, EdgeDB(Gel)</li>
+                        <li><span>데이터베이스 &ensp;| </span> &ensp; MySQL, PostgreSQL, SQLite, EdgeDB(Gel)</li>
                         <li><span>운영체제 / 환경 &ensp;| </span> &ensp; Linux, Docker, AWS</li>
                         <li><span>버전 관리 / 협업 &ensp;| </span> &ensp; Git, Github</li>
-                        <li><span>개발 툴 / IDE &ensp;| </span> &ensp; VSCode, PyCharm </li>
+                        <li><span>개발 툴 / IDE &ensp;| </span> &ensp; VSCode, PyCharm, Zed </li>
                     </ul>
                 </div>
                 <div class="tab-contents" id="experience">
