chore: 의존성 삭제 및 최신화

--- a/app/templates/projects.html
+++ b/app/templates/projects.html
@@ -112,7 +112,7 @@
             </div>
             {% endfor %}
         </div>
-        <a href="https://github.com/ji-min0?tab=repositories" class="btn btn1">See more<i class="fa-brands fa-github"></i></a>
+        <a href="https://github.com/ji-min0" class="btn btn1">See more<i class="fa-brands fa-github"></i></a>
     </div>
 </div>
 {% endblock %}
