chore: 인스타 삭제

--- a/app/templates/contact.html
+++ b/app/templates/contact.html
@@ -107,9 +107,9 @@
                 <p><i class="fa-regular fa-envelope"></i> k.jimin2002@gmail.com</p>
 <!--                <p><i class="fa-solid fa-mobile-screen"></i> +82 </p>-->
                 <div class="social-icons">
-                    <a href="#"><i class="fa-brands fa-instagram"></i>instagram</a>
+{#                    <a href="#"><i class="fa-brands fa-instagram"></i>instagram</a>#}
                     <a href="https://github.com/ji-min0"><i class="fa-brands fa-github"></i>github</a>
-                    <a href="https://hello-dev-world.tistory.com/"><i class="fa-solid fa-book"></i>tistory</a>
+                    <a href="https://hello-dev-world.tistory.com/"><i class="fa-solid fa-book"></i>blog</a>
                 </div>
                 <a href="/static/images/my-cv.pdf" download class="btn btn2">Download CV</a>
             </div>
